--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a{
 }
 span{
     display: inline-block;
-    margin: 8px;
+    /* margin: 8px; */
 }
 
 p{
@@ -26,6 +26,40 @@ i{
 
 /* header part */
 
+#navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
+    position: fixed;
+    top: -200px;
+    width: 100%;
+    /* height: 100px; */
+    display: block;
+    transition: top 0.3s;
+    z-index: 1;
+    background-color:#f2f2f2 ;
+    box-shadow: 0 1px 4px 0 rgb(60 64 67 / 30%);
+  }
+  
+  #navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+   
+    padding: 15px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+#nav-heading{
+    font-size: 50px;
+    font-weight: 700;
+    text-align: center;
+}
+
+
 
 #main-heading-div{
     text-align: center;
@@ -36,7 +70,7 @@ i{
 }
 
 #main-heading-storyforkids{
-   font: bold 45px Roboto, sans-serif;
+   font: bold 50px Roboto, sans-serif;
    font-weight: 700;
    line-height: normal;
     margin: 0 0 14px;
